--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -4,19 +4,13 @@
 }
 
 .moviesCard-image {
-    /* position: relative; */
     width: 100%;
     border-radius: 10px;
     margin-bottom: 14px;
     cursor: pointer;
 }
 
-.moviesCard-image:hover .moviesCard__button-save {
-    opacity: 1;
-    transition: opacity .2s linear;
-}
-
-.moviesCard:hover .moviesCard__button-save {
+.moviesCard-image:hover + .moviesCard__button-save {
     opacity: 1;
     transition: opacity .2s linear;
 }
@@ -71,9 +65,9 @@
     transition: opacity .2s linear;
 }
 
-/* .moviesCard__button-save:hover {
+.moviesCard__button-save:hover {
     opacity: 0.8;   
-} */
+}
 
 @media all and (max-width: 1145px) {
     .moviesCard {
