--- a/src/components/page.css
+++ b/src/components/page.css
@@ -3,7 +3,7 @@
     min-width: 320px;
     background-color: #202020;
     margin: 0 auto;
-    font-family: 'inter', Arial, sans-serif;
+    font-family: 'inter', sans-serif;
     text-rendering: optimizeLegibility;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
