--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -5,10 +5,10 @@
 
 .AboutMe__title {
     margin: 0 0 66px 0;
-    font-style: inter;
     font-weight: 400;
     font-size: 22px;
     line-height: 27px;
+    letter-spacing: -0.88px;
     color: #FFFFFF;
     border-bottom: 1px solid #DADADA;
     padding-bottom: 23px;
@@ -27,17 +27,16 @@
 .AboutMe__info-name {
     grid-area: A;
     margin: 0 0 18px;
-    font-style: inter;
     font-weight: 400;
     font-size: 50px;
     line-height: 58px;
+    letter-spacing: -2px;
     color: #FFFFFF;
 }
 
 .AboutMe__info-work {
     grid-area: B;
     margin: 0;
-    font-style: inter;
     font-weight: 500;
     font-size: 18px;
     line-height: 20px;
@@ -47,7 +46,6 @@
 .AboutMe__info-about {
     grid-area: C;
     margin: 26px 0 100px;
-    font-style: inter;
     font-weight: 400;
     font-size: 14px;
     line-height: 22px;
@@ -56,7 +54,6 @@
 
 .AboutMe__info-link {
     grid-area: D;
-    font-style: inter;
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
@@ -75,6 +72,7 @@
     width: 270px;
     height: 327px;
     object-fit: cover;
+    border-radius: 10px;
 }
 
 @media all and (max-width: 850px) {
@@ -86,6 +84,7 @@
         margin: 0 0 16px;
         font-size: 40px;
         line-height: 40px;
+        letter-spacing: -1.6px;
     }
 
     .AboutMe__info {
@@ -111,7 +110,7 @@
 
 @media all and (max-width: 560px) {
     .AboutMe {
-        margin: 70px 14px 70px;
+        margin: 85px 14px 70px;
     }
 
     .AboutMe__title {
@@ -138,9 +137,10 @@
     }
 
     .AboutMe__info-name {
-        margin: 0 0 20px;
+        margin: 40px 0 20px;
         font-size: 30px;
         line-height: 36.31px;
+        letter-spacing: -1.2px;
     }
 
     .AboutMe__info-work {
