--- a/src/components/Main/NavTab/NavTab.css
+++ b/src/components/Main/NavTab/NavTab.css
@@ -30,6 +30,7 @@
 
 @media all and (max-width: 560px) {
     .NavTab {
+        grid-template-columns: repeat(3, 82px);
         gap: 6px;
     }
 }
@@ -38,7 +39,7 @@
     .NavTab__item {
         width: 82px;
         height: 16px;
-        padding: 5px;
+        padding: 5px 0;
         font-size: 10px;
     }
 }
