--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -1,10 +1,9 @@
 .Portfolio {
-    margin: 100px 0 125px;
+    margin: 100px 0 100px;
 }
 
 .Portfolio__title {
-    margin: 0 0 50px 0;
-    font-style: inter;
+    margin: 0 0 25px 0;
     font-weight: 400;
     font-size: 18px;
     line-height: 20px;
@@ -32,10 +31,10 @@
     text-align: left;
     width: 100%;
     height: 90px;
-    font-style: inter;
     font-weight: 400;
     font-size: 30px;
     line-height: 50px;
+    letter-spacing: -1.2px;
     color: #FFFFFF;
     background: transparent url(../../../images/portfolio-link.svg) no-repeat right 40px;
     transition: opacity .2s linear;
@@ -53,6 +52,7 @@
     .portfolio__button {
         font-size: 28px;
         line-height: 50px;
+        letter-spacing: -1.2px;
     }
 }
 
@@ -64,7 +64,12 @@
     .portfolio__button {
         font-size: 18px;
         line-height: 28px;
+        letter-spacing: -0.72px;
         height: 67px;
         background: transparent url(../../../images/portfolio-link.svg) no-repeat right 27px / 11px;
+    }
+
+    .Portfolio__title {
+        font-size: 14px;
     }
 }
