--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -11,7 +11,6 @@
 .Promo__title {
     max-width: 730px;
     max-height: 116px;
-    /* font-style: normal; */
     font-weight: 400;
     font-size: 50px;
     line-height: 58px;
@@ -20,6 +19,7 @@
     vertical-align: middle;
     display: inline-block;
     color: #FFFFFF;
+    letter-spacing: -2px;
 }
 
 @media all and (max-width: 850px) {
@@ -29,10 +29,12 @@
     }
 
     .Promo__title {
-        max-width: 680px;
+        /* max-width: 680px; */
+        width: 92%;
         max-height: 104px;
         font-size: 40px;
         line-height: 52px;
+        letter-spacing: -1.6px;
         margin: 350px auto 314px;
     }
 }
@@ -45,8 +47,10 @@
 
     .Promo__title {
         max-height: 111px;
+        width: 100%;
         font-size: 29px;
         line-height: 37px;
+        letter-spacing: -1.16px;
         margin: 220px auto 212px;
     }
 }
