--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -1,15 +1,15 @@
 .Techs {
     max-width: 1140px;
     padding: 100px 70px;
-    background-color: #272727;
+    /* background-color: #272727; */
 }
 
 .Techs__title {
     margin: 0 0 90px 0;
-    font-style: inter;
     font-weight: 400;
     font-size: 22px;
     line-height: 27px;
+    letter-spacing: -0.88px;
     color: #FFFFFF;
     border-bottom: 1px solid #DADADA;
     padding-bottom: 23px;
@@ -18,10 +18,10 @@
 .Techs__subtitle {
     max-width: 600px;
     margin: 0 auto 26px;
-    font-style: inter;
     font-weight: 400;
     font-size: 50px;
     line-height: 58px;
+    letter-spacing: -1.2px;
     color: #FFFFFF;
     text-align: center;
 }
@@ -29,10 +29,10 @@
 .Techs__text {
     max-width: 460px;
     margin: 0 auto 100px;
-    font-style: inter;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
+    letter-spacing: -0.56px;
     color: #FFFFFF;
     text-align: center;
 }
@@ -48,10 +48,10 @@
 }
 
 .Techs__item {
-    font-style: inter;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
+    letter-spacing: -0.56px;
     color: #FFFFFF;
     text-align: center;
     padding-top: 21px;
@@ -65,7 +65,6 @@
 @media all and (max-width: 850px) {
     .Techs {
         padding: 90px 50px;
-        background-color: #272727;
     }
 
     .Techs__title {
@@ -93,9 +92,9 @@
     }
 }
 
-@media all and (max-width: 850px) {
+@media all and (max-width: 560px) {
     .Techs {
-        padding: 70px 18px;
+        padding: 55px 18px;
     }
 
     .Techs__title {
@@ -103,6 +102,7 @@
         font-size: 18px;
         line-height: 22px;
         padding-bottom: 28px;
+        border-bottom: 1px solid #000000;
     }
 
     .Techs__subtitle {
@@ -117,5 +117,19 @@
         margin: 0 auto 50px;
         font-size: 11px;
         line-height: 16px;
+        letter-spacing: -0.44px;
+    }
+
+    .Techs__list {
+        grid-template-columns: repeat(2, 84px);
+        row-gap: 10px;
+        column-gap: 10px;
+    }
+
+    .Techs__item {
+        font-size: 12px;
+        line-height: 14.52px;
+        width: 84px;
+        height: 57px;
     }
 }
