--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,6 +1,6 @@
 .profile__form {
     max-width: 410px;
-    margin: auto;
+    margin: 0 auto 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +12,7 @@
     font-size: 24px;
     line-height: 29px;
     color: #FFFFFF;
-    margin: 50px 0 123px;
+    margin: 55px 0 123px;
 }
 
 .profile__form_text-container {
@@ -43,7 +43,7 @@
     border: none;
     padding: 0;
     background: transparent;
-    margin: 204px 0 16px;
+    margin: 190px 0 16px;
     cursor: pointer;
     transition: opacity .2s linear;
 }
@@ -59,11 +59,11 @@
 
 @media all and (max-width: 770px) {
     .profile__form_title {
-        margin: 236px 0 96px;
+        margin: 216px 0 96px;
     }
 
     .profile__form_button {
-        margin: 210px 0 16px;
+        margin: 180px 0 16px;
     }
 }
 
@@ -73,13 +73,13 @@
     }
 
     .profile__form_title {
-        margin: 52px 0 80px;
+        margin: 55px 0 80px;
     }
 
     .profile__form_button {
         font-size: 12px;
         line-height: 14.52px;
         border: none;
-        margin: 379px 0 16px;
+        margin: 349px 0 16px;
     }
 }
