--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,7 +1,7 @@
 .searchForm {
     max-width: 1280px;
-    margin: 60px 70px 0;
-    border-bottom: solid #424242;
+    margin: 80px 70px 0;
+    border-bottom: 1px solid #424242;
 }
 
 .searchForm__container-input{
@@ -60,8 +60,7 @@
     }
 
     .searchForm {
-        margin: 60px 30px 0;
-        border-bottom: solid #424242;
+        margin: 80px 30px 0;
     }
 }
 
@@ -71,7 +70,20 @@
     }
 
     .searchForm {
-        margin: 60px 14px 0;
-        border-bottom: solid #424242;
+        margin: 80px 14px 0;
+    }
+
+    .searchForm__input {
+        min-height: 44px;
+        padding: 0 0 0 13px;
+    }
+
+    .searchForm__text {
+        font-weight: 400;
+        font-size: 11px;
+        line-height: 18px;
+        color: #FFFFFF;
+        margin: 0 0 0 14px;
+        text-align: center;
     }
 }
