--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -20,6 +20,14 @@
     opacity: 0.8;
 }
 
+.movies__error {
+    text-align: center;
+    margin: 20px 0 0;
+    color: #FFFFFF;
+    font-size: 20px;
+    font-weight: 400;
+}
+
 @media all and (max-width: 1145px) {
     .movies__button {
         margin: 60px auto 100px;
