--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -22,6 +22,7 @@
     padding: 0 0 0 20px;
     margin-right: 10px;
     background-color: #2F2F2F;
+    color: #FFFFFF;
     border: none;
     border-radius: 8px;
     font-weight: 400;
@@ -52,6 +53,16 @@
     color: #FFFFFF;
     margin: 0 0 0 12px;
     text-align: center;
+}
+
+.searchForm__error {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #ee3465;
+    text-align: center;
+    margin: 20px auto 0;
+    display: block;
 }
 
 @media all and (max-width: 900px) {
