--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,8 @@
 
 @import url(./components//Navigation/Navigation.css);
 
+/* SavedMovies */
+@import url(./components/SavedMovies/SavedMovies.css);
 
 /* Footer */
 @import url(./components/Footer/Footer.css);
