--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -89,7 +89,7 @@
 
 .profile__error {
   color: #ee3465;
-  margin: 0;
+  margin: 20px 0 0;
   font-weight: 400;
   font-size: 11px;
   line-height: 13.31px;
